# RMCS-Flight

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
rmcs_ws/: .clangd
rmcs_ws/src/alliance_ros_auto_aim/: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  plugins.xml
rmcs_ws/src/alliance_ros_auto_aim/.github/workflows/: build_test.yml  update_submodule.yml
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/: CMakeLists.txt
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/configs/: example.yaml
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/include/core/: event_bus.hpp
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/include/data/: fire_control.hpp  mat_stamped.hpp  time_stamped.hpp
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/include/interfaces/: fire_controller.hpp  identifier.hpp  predictor.hpp
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/include/parameters/: params_system_v1.hpp
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/src/playground/HZA/identifier/: armor_identifier_detail.cpp  armor_identifier_detail.hpp
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/src/tongji/: auto_aim_system.cpp
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/src/tongji/fire_controller/: aim_point_chooser.hpp  aim_solver.hpp  fire_controller.cpp  fire_controller.hpp  trajectory.hpp
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/src/tongji/identifier/: armor_filter.hpp  classifier.hpp  decider.cpp  decider.hpp  identifier.cpp  identifier.hpp  tracker.hpp
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/src/tongji/predictor/car_predictor/: car_predictor.hpp  car_predictor_manager.cpp  car_predictor_manager.hpp
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/src/tongji/predictor/kalman_filter/: extended_kalman_filter.hpp  predict_model.hpp
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/src/tongji/solver/: reprojection_util.hpp  solved_armor.hpp  solver.cpp  solver.hpp
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/src/tongji/state_machine/: state_machine.cpp  state_machine.hpp
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/src/util/: index.hpp
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/src/util/parameters/: params_system_v1.cpp  profile.cpp
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/src/v1/: auto_aim_system_v1.cpp
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/src/v1/fire_controller/: fire_controller.cpp  fire_controller.hpp
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/src/v1/identifier/: identifier.cpp  identifier.hpp
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/src/v1/pnpsolver/: armor_pnp_solver.cpp
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/src/v1/predictor/: predictor_manager.cpp
rmcs_ws/src/alliance_ros_auto_aim/alliance_auto_aim/src/v1/predictor/car/: car_predictor.cpp  car_predictor.hpp
rmcs_ws/src/alliance_ros_auto_aim/dockerfiles/: ros-humble.dockerfile
rmcs_ws/src/alliance_ros_auto_aim/env/: common_install
rmcs_ws/src/alliance_ros_auto_aim/include/: alliance_adapter.hpp  alliance_camera.hpp  alliance_controller.hpp  alliance_initializer.hpp  sync_data_processor.hpp
rmcs_ws/src/alliance_ros_auto_aim/src/: alliance_adapter.cpp  alliance_camera.cpp  alliance_controller.cpp  alliance_initializer.cpp
rmcs_ws/src/alliance_ros_auto_aim/tests/: stage1_camera_test.cpp
rmcs_ws/src/rmcs_auto_aim/: CMakeLists.txt  LICENSE  README.md  package.xml  plugins.xml
rmcs_ws/src/rmcs_auto_aim/models/: armoridentify_with_base.onnx
rmcs_ws/src/rmcs_auto_aim/src/: auto_aim_initializer.cpp
rmcs_ws/src/rmcs_auto_aim/src/core/: auto_aim_controller.cpp
rmcs_ws/src/rmcs_auto_aim/src/core/fire_controller/: fire_controller.hpp  noname_controller.cpp  noname_controller.hpp  tracker_test_controller.cpp  tracker_test_controller.hpp
rmcs_ws/src/rmcs_auto_aim/src/core/identifier/armor/: armor.hpp  armor_identifier.cpp  armor_identifier.hpp  number_identifier.cpp  number_identifier.hpp
rmcs_ws/src/rmcs_auto_aim/src/core/pnpsolver/: fusion_solver.hpp
rmcs_ws/src/rmcs_auto_aim/src/core/pnpsolver/armor/: armor3d.hpp  armor_pnp_solver.cpp  armor_pnp_solver.hpp  reproject_ceres.hpp
rmcs_ws/src/rmcs_auto_aim/src/core/pnpsolver/light_bar/: light_bar_solver.cpp  light_bar_solver.hpp  line.hpp
rmcs_ws/src/rmcs_auto_aim/src/core/tracker/: target_interface.hpp  tracker_interface.hpp
rmcs_ws/src/rmcs_auto_aim/src/core/tracker/armor/: armor_target.hpp  armor_tracker.hpp
rmcs_ws/src/rmcs_auto_aim/src/core/tracker/armor/filter/: armor_ekf.hpp
rmcs_ws/src/rmcs_auto_aim/src/core/tracker/car/: car_tracker.cpp  car_tracker.hpp  car_tracker_state.hpp
rmcs_ws/src/rmcs_auto_aim/src/core/tracker/car/filter/: car_frame_kf.hpp  car_frame_z_kf.hpp  car_kf.hpp  car_movement_kf.hpp  car_pos_kf.hpp
rmcs_ws/src/rmcs_auto_aim/src/core/trajectory/: trajectory_solver.cpp  trajectory_solvor.hpp
rmcs_ws/src/rmcs_auto_aim/src/core/transform_optimizer/armor/: armor.hpp
rmcs_ws/src/rmcs_auto_aim/src/core/transform_optimizer/armor/quadrilateral/: quadrilateral.cpp  quadrilateral.hpp
rmcs_ws/src/rmcs_auto_aim/src/test/: test.cpp
rmcs_ws/src/rmcs_auto_aim/src/util/: ekf.hpp  math.hpp  utils.hpp
rmcs_ws/src/rmcs_auto_aim/src/util/image_viewer/: image_viewer.cpp  image_viewer.hpp
rmcs_ws/src/rmcs_auto_aim/src/util/optimizer/: fibonacci.hpp
rmcs_ws/src/rmcs_auto_aim/src/util/profile/: profile.cpp  profile.hpp
rmcs_ws/src/rmcs_core/: plugins.xml
rmcs_ws/src/rmcs_msgs/: CMakeLists.txt  package.xml
rmcs_ws/src/rmcs_tongji_auto_aim/: CMakeLists.txt  README.md  package.xml  plugins.xml
rmcs_ws/src/rmcs_tongji_auto_aim/config/: default_params.yaml
rmcs_ws/src/rmcs_tongji_auto_aim/src/: tongji_auto_aim_controller.cpp  tongji_auto_aim_initializer.cpp
rmcs_ws/src/rmcs_tongji_auto_aim/src/util/: armor_filter.cpp  armor_filter.hpp  data_converter.hpp  fps_counter.hpp  yaml_generator.hpp
scripts/: check_hikcamera_env.sh  init_hikcamera_env.sh  setup_host_env.sh
(+4 files in other folders)
