<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmcs_auto_aim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="paradise_c@qq.com">developer</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>hikcamera</depend>
  <depend>rmcs_msgs</depend>
  <depend>rmcs_executor</depend>
  <depend>rmcs_description</depend>
  <depend>fast_tf</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
