<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmcs_tongji_auto_aim</name>
  <version>1.0.0</version>
  <description>RMCS auto-aim component using Tongji algorithms from alliance_auto_aim</description>
  <maintainer email="noskillzheng@example.com">noskillzheng</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- ROS2 核心依赖 -->
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>

  <!-- RMCS 框架依赖 -->
  <depend>rmcs_executor</depend>
  <depend>rmcs_description</depend>
  <depend>rmcs_msgs</depend>
  <depend>fast_tf</depend>
  <depend>hikcamera</depend>

  <!-- 外部库依赖 -->
  <depend>eigen</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
